# hitos_setup

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: calibration_intrinsic.yaml  ekf.yaml  ekf_global.yaml  ekf_local.yaml  fastdds_shm_profile.xml  ouster_params.yaml  ptp4l.conf  ublox7_gps.yaml
launch/: camera_gui.launch.py  ekf.launch.py  gps.launch.py  hitos_full.launch.py  hz_monitor.launch.py  lidar.launch.py  sensor_frames.launch.py  sensor_model.launch.py  sensors.launch.py
meshes/: basler_camera.stl  camera_pair_paralel_v2.stl  dht22.stl  flir_camera.stl  nodemcu_dht22_box.stl
scripts/: check_mermaid.py  gps_smoother_node.py  gui_rss_logger.sh  hitos_private_functions.sh  hitos_setup.sh  imu_restamper  log_utils.sh  ouster_lifecycle_recover.sh  render_model.py  render_model_vtk.py
src/: ouster_recal_node.cpp  topic_hz_monitor.cpp
systemctl_services/: hitos-manager-sudoers  hitos_camera_gui.service  hitos_cameras.service  hitos_hz_monitor.service  hitos_iptables.service  hitos_log_cleanup.service  hitos_log_cleanup.timer  hitos_ptp.service  hitos_ptp_sync.service  hitos_sensors.service  hitos_sync.service  hitos_web_manager.service  setup_system_limits.sh
systemctl_services/logrotate.timer.d/: hourly.conf
urdf/: hitos_sensors.urdf.xacro
web_manager/: app.py  config.py  ros_monitor.py
web_manager/static/css/: style.css
web_manager/static/js/: app.js  ui-core.js
web_manager/templates/: index.html
